traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:15: error: ';' expected but 'else' found.
    else if (x!=0 && ligne%2 ==1) {
    ^TraversalZigZag:32: error: Missing closing brace `}' assumed here
}
^